[package]
name = "bevy_rust_meetup"
version = "0.1.0"
edition = "2021"

# Enable optimizations for dependencies but not for our code
# [profile.dev.package."*"]
# debug = false
# opt-level = 1

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.22.1"
bevy_asset_loader = { version = "0.19.1", features = ["2d"] }
